# xo1997-gallery

./: .env.example  .gitignore  CLAUDE.md  PPT元素说明.md  README.md  data_template.xlsx  excel_to_sqlite.py  generate_ppt.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run.bat
.plans/: logic-issues-fix.md
app/: __init__.py  main.py
app/common/: __init__.py  log_config.py  logger.py  storage_config.py
app/components/: __init__.py  chat_message_widget.py  file_selector_widget.py  group_chat_message_widget.py  log_viewer_window.py  participant_edit_dialog.py  status_card_widget.py
app/ui/: NOTICE  __init__.py
app/view/: __init__.py  ai_chat_interface.py  ai_settings_interface.py  excel_ppt_interface.py  general_settings_interface.py  group_chat_interface.py  main_window.py
core/: __init__.py  excel_processor.py  group_chat_manager.py  model_manager.py  ppt_generator.py  tts_service.py
core/tools/: __init__.py  base.py  directory_tools.py  execute_tools.py  file_tools.py
data/: __init__.py  database.py
data/models/: __init__.py  ai_config.py  department.py  employee.py  group_chat.py
data/repositories/: __init__.py  ai_config_repository.py  department_repository.py  employee_repository.py  group_chat_repository.py
tests/: conftest.py  helpers.py
tests/mocks/: __init__.py  langchain_mock.py
tests/test_components/: test_chat_message_widget.py  test_file_selector.py  test_status_card.py
tests/test_core/: test_directory_tools.py  test_excel_processor.py  test_file_tools.py  test_logger.py  test_model_manager.py  test_ppt_generator.py  (+1 more)
(+14 files in other folders)
